--- a/web_interface/templates/home.html
+++ b/web_interface/templates/home.html
@@ -19,7 +19,7 @@
     <div class="starter-template">
         <h1>Robot control</h1>
         <span style="text-align:center;width: 100%;display: block;">
-            <img src="#" style="height:728px; width: 1024px" id="preview">
+            <iframe src="#" style="height:728px; width: 1024px" id="preview"></iframe>
         </span>
         <nav class="navbar navbar-expand-md navbar-dark bg-dark">
 
